--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.10.1",
-    "vue": "^2.6.10",
-    "vue-resource": "^1.5.1"
+    "less-loader": "^5.0.0",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
@@ -20,6 +21,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.9.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -31,7 +33,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-debugger": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
